<resources>
    <string name="app_name">AgroPlus</string>
    <string name="name">Bima Rabari</string>
    <string name="username">bima_r</string>
    <string name="birthdate">09/09/1998</string>
    <string name="village">Vallabhnagar</string>
    <string name="state">Gujarat</string>
    <string name="state_prompt">Choose a state</string>
    <string-array name="state_arrays">
        <item>Gujarat</item>
        <item>Maharashtra</item>
        <item>Rajasthan</item>
    </string-array>
    <string-array name="Gujarat_city">
        <item>Ahmedabad</item>
        <item>Gandhinagar</item>
        <item>Lunavada</item>
        <item>Junagadh</item>
    </string-array>
    <string-array name="Rajasthan_city">
        <item>Jodhpur</item>
        <item>Jaipur</item>
        <item>Ajmer</item>
        <item>Jaisalmer</item>
    </string-array>
    <string-array name="Maharashtra_city">
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Nagpur</item>
        <item>Nashik</item>
    </string-array>
    <string-array name="crop_arrays">
        <item>Wheat</item>
        <item>Rice</item>
        <item>Bajra</item>
    </string-array>
</resources>
